--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "deez",
   "version": "0.1.0",
+  "homepage": "https://man-exists.github.io/deez-carti-maker/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,6 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
